refactor all layers.